# Concurrentes

./: README.md
TP1/: .gitignore  Cargo.toml  README.md  run.sh
TP1/src/: main.rs
TP1/src/data_types/: data_input_jsonl.rs  mod.rs  report.rs  site_stats.rs  tag_stats.rs  total_stats.rs
TP1/src/logic/: fork_join.rs  generate_final_report.rs  mod.rs  pre_processing.rs  processing_file.rs
TP2/: Cargo.toml  README.md  run.sh
TP2/orders/: orders0.json  orders1.json  orders2.json  orders3.json  orders4.json  orders5.json
TP2/src/: lib.rs
TP2/src/Robot/: main.rs  robot.rs
TP2/src/common/: constant.rs  logic.rs  mod.rs  order.rs
TP2/src/gateway/: gateway.rs  main.rs
TP2/src/iceCreamRepository/: ice_cream_taste_repository.rs  main.rs  tastes.json
TP2/src/interface/: interface.rs  main.rs
TP2/src/order_manager/: main.rs  order_manager.rs
TP2/src/ring_dist_mutex/: mod.rs  ring_dist_mutex.rs
