[package]
name = "tp2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0-alpha.1"
chrono = "0.4"
uuid = "1.9.1"

actix = "0.11.1"
actix-rt = "2.0"
futures-channel = "*"
console-subscriber = { git = "https://github.com/tokio-rs/console.git" }
tokio = "*"
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
quote = "1.0.27"
env_logger = "0.11.3"

[[bin]]
name = "gateway"
path = "src/gateway/main.rs"

[[bin]]
name = "repo"
path = "src/iceCreamRepository/main.rs"

[[bin]]
name = "interface"
path = "src/interface/main.rs"

[[bin]]
name = "order"
path = "src/order_manager/main.rs"

[[bin]]
name = "robot"
path = "src/Robot/main.rs"
